--- a/online education/teachers.html
+++ b/online education/teachers.html
@@ -250,7 +250,7 @@
 
     </div>
 
-    <div class="credit"> created by <span>mr. web designer</span> | all rights reserved! </div>
+    <div class="credit"> created by <span>Shashi Kant Verma</span> | all rights reserved! </div>
 
 </section>
 
